# Aqueduct

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO  client.cpp  client_main.cpp  client_util.hpp  config.cpp  config.hpp  information.txt  message.hpp  receive.hpp  server.cpp  server_main.cpp  server_util.cpp  server_util.hpp  tempCodeRunnerFile.cpp
client/: client_config.cpp  client_config.hpp  client_util.cpp  client_util.hpp  config.cpp  config.hpp  connection.cpp  connection.hpp  main.cpp  message.cpp  message.hpp  opt.cpp  opt.hpp  shared.cpp  shared.hpp  socket_management.cpp  socket_management.hpp  thread_safe_queue.hpp
client/common/: config.hpp  console.cpp  console.hpp  opt.cpp  opt.hpp  shared.cpp  shared.hpp  signal_handler.cpp  signal_handler.hpp
client/tunnel/: connection.cpp  connection.hpp  message.cpp  message.hpp  socket_management.cpp  socket_management.hpp
common/: message.cpp  message.hpp  random_key.cpp  random_key.hpp
demo_service/: main.py
server/: Cargo.toml  config.cpp  config.hpp  connection.cpp  connection.hpp  main.cpp  message.cpp  message.hpp  opt.cpp  opt.hpp  server_config.cpp  server_config.hpp  server_util.cpp  server_util.hpp  shared.cpp  shared.hpp  socket_management.cpp  socket_management.hpp
server/api/: Cargo.toml
server/api/src/: console.rs  error.rs  main.rs  message.rs  opt.rs  state.rs
server/api/src/auth/: jwt_tokens.rs  key.rs  mod.rs
server/api/src/core/: connection.rs  core.rs  io.rs  mod.rs
server/api/src/core_io/: core_io.rs  mod.rs
server/api/src/domain/: auth.rs  client.rs  clients.rs  login.rs  mod.rs  status.rs  tokens.rs  users.rs
server/api/src/orm/: clients.rs  connection.rs  mod.rs  tokens.rs  web_user.rs
server/common/: console.cpp  console.hpp  input.cpp  opt.cpp  opt.hpp  shared.cpp  shared.hpp  signal_handler.cpp
server/core/children/: api.cpp  api.hpp  token.cpp  token.hpp
server/core/common/: console.cpp  console.hpp  input.cpp  input.hpp  opt.cpp  opt.hpp  shared.cpp  shared.hpp  signal_handler.cpp  signal_handler.hpp
server/core/database/: authentication.cpp  authentication.hpp  client.cpp  client.hpp  database.cpp  database.hpp  web_user.cpp  web_user.hpp
server/core/key/: generation.cpp  generation.hpp
server/core/tunnel/: connection.cpp  connection.hpp  message.cpp  message.hpp  socket_management.cpp  socket_management.hpp
server/database/: auth.cpp  auth.hpp  authentication.cpp  authentication.hpp  client.cpp  client.hpp  database.cpp  database.hpp
server/entity/: Cargo.toml
server/entity/src/entities/: auth.rs  client.rs  mod.rs  prelude.rs  salt.rs  web_auth.rs
server/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
server/frontend/src/: app.tsx  main.tsx
server/frontend/src/components/: auth_provider.tsx  layout.tsx  navbar.tsx
server/frontend/src/components/ui/: toaster.tsx
server/frontend/src/core/: fetcher.ts
server/frontend/src/pages/: access.tsx  client.tsx  dashboard.tsx  login.tsx
server/frontend/src/services/: auth.ts  client.ts  token.ts
server/migrate/: v0_1_1.sql
server/tunnel/: config.hpp  connection.cpp  connection.hpp  input.cpp  input.hpp  message.cpp  message.hpp  opt.cpp  opt.hpp  shared.hpp  socket_management.hpp
