[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["cors"] }
