[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
anyhow = "1.0.97"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "net", "fs"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
clap = { version = "4.5.34", features = ["derive"] }
chrono = "0.4.40"
once_cell = "1.21.3"
sea-orm = { version = "1.1.8", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "debug-print"] }
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
data-encoding = "2.9.0"
openssl = { version = "0.10.72", features = ["vendored"] }
futures-util = "0.3.31"
tower = "0.5.2"
oslog = "0.2.0"
log = "0.4.27"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
